--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ image: {{page.image}}
 facebook: https://www.facebook.com/webjeda
 twitter: https://twitter.com/webjeda
 github: https://github.com/sharu725
-youtube: https://www.youtube.com/channel/UCbOO7d0vVo0kIrkd7m32irg
+youtube: https://www.youtube.com/channel/UCbOO7d0vVo0kIrkd7m32irg?sub_confirmation=1
 email: mailto:hello@webjeda.com
 feedburner-subscribe: https://feedburner.google.com/fb/a/mailverify?uri=webjedablog&amp;loc=en_US 
 analytics: 'UA-71358787-1'
