--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,10 @@
 # Site settings
 title: WebJeda | A modern web development blog
 description: "WebJeda is a company oriented towards building modern websites and apps. It also provides smart hosting solutions. Contact us for modern, fast and responsive websites"
-url: http://blog.webjeda.com
+url: https://blog.webjeda.com
+enforce_ssl: blog.webjeda.com
+
+
 author: 
   twitter: sharathdt
 twitter:
