--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -9,7 +9,7 @@
 
 url: 		'http://localhost:4000'
 baseurl: 	''
-
+exclude: ['data']
 
 sass:
   # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
