--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: WebJeda | A modern web development blog
 description: "WebJeda is a company oriented towards building modern websites and apps. It also provides smart hosting solutions. Contact us for modern, fast and responsive websites"
-url: https://blog.webjeda.com
-enforce_ssl: blog.webjeda.com
+url: https://virtualous.github.io/blog-v3
+enforce_ssl: virtualous.github.io/blog-v3
 
 
 author: 
